--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="n_o_possui_uma_conta_cadastre_se">Não possui uma conta? Cadastre-se!</string>
     <string name="login">Login</string>
     <string name="pokemon_image">Pokemon Image</string>
+    <string name="pokemon_detail">Detalhes do Pokémon</string>
 </resources>
