--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="login">Login</string>
     <string name="pokemon_image">Pokemon Image</string>
     <string name="pokemon_detail">Detalhes do Pokémon</string>
+    <string name="salvar_imagem">Salvar Imagem</string>
 </resources>
