--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="pokemon_image">Pokemon Image</string>
     <string name="pokemon_detail">Detalhes do Pokémon</string>
     <string name="salvar_imagem">Salvar Imagem</string>
+    <string name="favoritar">Favoritar</string>
 </resources>
